--- a/01.PROJECT/src/aos/java/cn/osworks/aos/web/tag/core/resources/tag/ext/grid/gridPanelTag.vm
+++ b/01.PROJECT/src/aos/java/cn/osworks/aos/web/tag/core/resources/tag/ext/grid/gridPanelTag.vm
@@ -196,6 +196,7 @@ var ${id}_cfg = {
   store: ${id}_store,
   columns:${id}_grid_columns,
   viewConfig: {
+      enableTextSelection:true,
       #if($stripeRows)
           stripeRows: $stripeRows
 	  #end
