--- a/01.PROJECT/src/aos/java/cn/osworks/aos/web/tag/core/resources/tag/ext/tree/treePanelTag.vm
+++ b/01.PROJECT/src/aos/java/cn/osworks/aos/web/tag/core/resources/tag/ext/tree/treePanelTag.vm
@@ -46,6 +46,10 @@ var ${id}_store = Ext.create('Ext.data.TreeStore', {
 	nodeParam : '$nodeParam',
 #end
 	proxy : {
+		##将load的提交方式强制改为POST，缺省为GET。GET会导致在部分Web容器里中文参数乱码的情况。
+		actionMethods: {
+            read: 'POST'  
+        },
 		type : 'ajax',
 		url : '$url'
 	},
