--- a/AOS-ADMIN/01.PROJECT/webapp/static/css/aos-all.css
+++ b/AOS-ADMIN/01.PROJECT/webapp/static/css/aos-all.css
@@ -85,7 +85,7 @@ body {
 .x-statusbar .x-status-busy {
     padding-left: 25px !important;
     background: transparent no-repeat 3px 0;
-    background-image: url(../../static/image/gif/ajax.gif);
+    background-image: url(../../static/image/gif/loading.gif);
 }
 /* 状态栏专用结束 */
 
