--- a/01.SRC-BACKEND/src/framework/java/aos/framework/taglib/core/resources/tag/ext/subvm/events.vm
+++ b/01.SRC-BACKEND/src/framework/java/aos/framework/taglib/core/resources/tag/ext/subvm/events.vm
@@ -1,8 +1,8 @@
 ##on属性注册组件的事件监听
 
 ##下面这组主要是表单元素系列的常用事件
-#if($onchang)
-	${id}.on('change', $onchang); 
+#if($onchange)
+	${id}.on('change', $onchange); 
 #end
 #if($onkeydown)
 	enableKeyEvents : true,
