--- a/01.SRC-BACKEND/src/framework/java/aos/framework/taglib/core/resources/tag/ext/grid/gridPanelTag.vm
+++ b/01.SRC-BACKEND/src/framework/java/aos/framework/taglib/core/resources/tag/ext/grid/gridPanelTag.vm
@@ -70,117 +70,40 @@ var ${id}_store = Ext.create('Ext.data.Store', {
 var ${id}_grid_columns = [
     #foreach($columndto in $columns)
         {
-			id:'${columndto.id}',
-			stopSelection:false,
-		#if(${columndto.width})
-			width:${columndto.width},
-		#end
-		#if(${columndto.summaryType})
-			summaryType:'${columndto.summaryType}',
-		#end
-		#if(${columndto.summaryRenderer})
-			summaryRenderer:${columndto.summaryRenderer},
-		#end
-        #if(${columndto.header})
-			header:'<span class="app-grid-column-header">${columndto.header}</span>',
-		#end
-		#if(${columndto.dataIndex})
-			dataIndex:'${columndto.dataIndex}',
-	   #end
-	   #if(${columndto.hidden})
-			hidden:${columndto.hidden},
-	   #end
-	   #if(${columndto.hideable})
-			hideable:${columndto.hideable},
-	   #end
-	   #if(${columndto.sortable})
-			sortable:${columndto.sortable},
-	   #end
-	   #if(${columndto.flex})
-			flex:${columndto.flex},
-	   #end
-	   #if(${columndto.rendererField})
-			renderer:function(value,metaData,record,rowIndex ,colIndex ,store){
-			 #set($dicList = ${columndto.dicList})
-			 if(Ext.isEmpty(value)) return '';
-			    ##返回的JSON中的数值类型
-					#foreach($dic in $dicList)
-					    if(value == '$dic.code_') return '$dic.desc_';
-					#end	
-			 return value;
-			},
-	   #end
-	   #if((${columndto.rendererFn} || ${columndto.celltip}) && !${columndto.rendererField})
-			renderer:function(value,metaData,record,rowIndex ,colIndex ,store){
-			      #if(${columndto.celltip})
-			          metaData.tdAttr = 'data-qtip="'+value+'"';
-				  #end
-				  #if(${columndto.rendererFn})
-			          return ${columndto.rendererFn}(value,metaData,record,rowIndex ,colIndex ,store);
-			      #else
-					  return value;
-				  #end
-			},
-	   #end
-	   #if(${columndto.format})
-			format:'${columndto.format}',
-	   #end
-	   #if(${columndto.align})
-			align:'${columndto.align}',
-	   #end
-	   #if(${columndto.editor} && !${columndto.editor2})
-			editor:'${columndto.editor}',
-	   #end
-	   #if(${columndto.editor2})
-			editor:${columndto.editor2},
-	   #end
-	   #if(${columndto.lockable})
-			lockable:${columndto.lockable},
-	   #end
-	   #if(${columndto.locked})
-			locked:${columndto.locked},
-	   #end
-	   #if(${columndto.maxWidth})
-			maxWidth:${columndto.maxWidth},
-	   #end
-	   #if(${columndto.minWidth})
-			minWidth:${columndto.minWidth},
-	   #end
-	   #if(${columndto.any})
-			${columndto.any},
-	   #end
-	   #if(${columndto.type} == "action")
-	   #set($actionDtos = ${columndto.actionDtos})
-    		items: [
-    		 #foreach($actionDto in $actionDtos)
-				#if($velocityCount != "1")
-				  '-',
-				#end
-				{
-				#if(${actionDto.icon})
-			        icon: '${actionDto.icon}',
-				#end
-				#if(${actionDto.tooltip})
-			        tooltip: '${actionDto.tooltip}',
-				#end
-				#if(${actionDto.handler})
-			        handler: ${actionDto.handler},
-				#end
-				#if(${actionDto.disabledFn})
-			        isDisabled: ${actionDto.disabledFn},
-				#end	
-				    app:169
-				}#if($velocityCount != $actionDtos.size()),#end
-    		 #end
-    		],
-		#end
-	   	    xtype: '${columndto.xtype}'
-	   #if(${columndto.tpl})
-			,tpl:'${columndto.tpl}'
-	   #end
+		    #if(${columndto.type} != "group")
+		       #parse("${vmpath}ext/grid/columns.vm")
+		    #else
+		       #set($subColumns = ${columndto.columns})
+		       header:'<span class="app-grid-column-header">${columndto.header}</span>',
+		       columns:[
+		       #foreach($columndto in $subColumns)
+		         {
+		         #if(${columndto.type} != "group")
+			       #parse("${vmpath}ext/grid/columns.vm")
+			     #else
+			        #set($subColumns2 = ${columndto.columns})
+			        header:'<span class="app-grid-column-header">${columndto.header}</span>',
+			        columns:[
+			             #foreach($columndto in $subColumns2)
+			             {
+					         #if(${columndto.type} != "group")
+						       #parse("${vmpath}ext/grid/columns.vm")
+						     #end
+						     id:'${columndto.id}'
+			             }#if($velocityCount != $subColumns2.size()),#end
+			             #end
+			          ],
+			     #end
+		         id:'${columndto.id}'
+		         }#if($velocityCount != $subColumns.size()),#end
+		       #end
+		       ],
+		    #end
+		    id:'${columndto.id}'
 		}#if($velocityCount != $columns.size()),#end
     #end
 ];
+##嗨，小屁孩。别再努力了，以你的智商再努力也看不懂上面这段代码的。-- 阿老表
 
 ##Grid定义
 var ${id}_cfg = {
