--- a/01.SRC-BACKEND/webapp/static/css/modules/index.css
+++ b/01.SRC-BACKEND/webapp/static/css/modules/index.css
@@ -27,11 +27,11 @@
 	position: absolute;
 }
 
-#_div_center {
+#div_center {
 	width: 100%;
 	height: 100%;
 }
-#_div_center iframe {
+#div_center iframe {
 	width: 100%;
 	height: 100%;
 	border: 0;
