no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/head.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/head.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="/theme/assets/skin/default_skin/css/theme.css" />
 <link rel="stylesheet" type="text/css" href="/theme/assets/admin-tools/admin-forms/css/admin-forms.css" />
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/magnific/magnific-popup.css" />
-<link rel="stylesheet" type="text/css" href="/theme/assets/admin-tools/admin-plugins/admin-modal/adminmodal.css">
+<link rel="stylesheet" type="text/css" href="/theme/assets/admin-tools/admin-plugins/admin-modal/adminmodal.css" />
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/datatables/media/css/dataTables.bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/select2/css/core.css" />
 <link rel="shortcut icon" href="/theme/assets/img/favicon.ico" />
