--- a/myclouds-admin-web/src/main/resources/templates/fragments/header-banner.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/header-banner.html
@@ -78,7 +78,7 @@
 
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle fw600 p15" data-toggle="dropdown">
-				<img src="/theme/assets/img/avatars/2.jpg" alt="用户头像" class="mw30 br64 mr15" />
+				<img src="/theme/assets/img/avatars/1.png" class="mw30 br64 mr15" />
 				阿黑哥 <span class="caret caret-tp hidden-xs"></span>
 			</a>
 			<ul class="dropdown-menu list-group dropdown-persist w250 animated animated-short fadeIn" role="menu">
