no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/param.html
@@ -69,7 +69,7 @@
 							<div class="panel-heading">
 								<span class="panel-title">键值参数列表</span>
 								<div class="widget-menu pull-right mr5">
-									<button class="btn btn-default btn-gradient btn-sm ph15" type="button">
+									<button id="btn_new" class="btn btn-default btn-gradient btn-sm ph15" type="button">
 										<span class="glyphicon glyphicon-plus"></span> 新增
 									</button>
 								</div>
@@ -94,6 +94,89 @@
 					</div>
 				</div>
 
+				<!-- 新增参数窗口 -->
+				<div id="w-add-param" class=" popup-basic admin-form mfp-with-anim mfp-hide">
+					<div class="panel">
+						<div class="panel-heading">
+							<span class="panel-title"><i class="fa fa-rocket"></i>Leave a comment</span>
+						</div>
+						<!-- end .panel-heading section -->
+
+						<form id="comment">
+							<div class="panel-body p25">
+								<div class="section row">
+									<div class="col-md-6">
+										<label for="firstname" class="field prepend-icon">
+											<input type="text" name="firstname" id="firstname" class="gui-input" placeholder="First name..." />
+											<label for="firstname" class="field-icon">
+												<i class="fa fa-user"></i>
+											</label>
+										</label>
+									</div>
+									<!-- end section -->
+
+									<div class="col-md-6">
+										<label for="lastname" class="field prepend-icon">
+											<input type="text" name="lastname" id="lastname" class="gui-input" placeholder="Last name..." />
+											<label for="lastname" class="field-icon">
+												<i class="fa fa-user"></i>
+											</label>
+										</label>
+									</div>
+									<!-- end section -->
+
+								</div>
+								<!-- end section row section -->
+
+								<div class="section row">
+									<div class="col-md-6">
+										<label for="email" class="field prepend-icon">
+											<input type="email" name="email" id="email" class="gui-input" placeholder="Email address" />
+											<label for="email" class="field-icon">
+												<i class="fa fa-envelope"></i>
+											</label>
+										</label>
+									</div>
+									<!-- end section -->
+
+									<div class="col-md-6">
+										<label for="website" class="field prepend-icon">
+											<input type="url" name="website" id="lastname" class="gui-input" placeholder="Website url..." />
+											<label for="website" class="field-icon">
+												<i class="fa fa-globe"></i>
+											</label>
+										</label>
+									</div>
+									<!-- end section -->
+
+								</div>
+								<!-- end section row section -->
+
+								<div class="section">
+									<label for="comment" class="field prepend-icon">
+										<textarea class="gui-textarea" id="comment" name="comment" placeholder="Your comment"></textarea>
+										<label for="comment" class="field-icon">
+											<i class="fa fa-comments"></i>
+										</label>
+										<span class="input-footer"> <strong>Hey You:</strong> We expect a great comment...
+										</span>
+									</label>
+								</div>
+								<!-- end section -->
+
+							</div>
+							<!-- end .form-body section -->
+
+							<div class="panel-footer">
+								<button type="submit" class="button btn-primary">Post Comment</button>
+							</div>
+							<!-- end .form-footer section -->
+						</form>
+					</div>
+					<!-- end: .panel -->
+				</div>
+				<!-- end: 新增参数窗口 -->
+
 			</section>
 			<!-- End: 业务办理区 -->
 
@@ -117,7 +200,11 @@
 			$("#btn_query").on("click", function(event) {
 				queryParams();
 			});
-			$('#dt_param').on('init.dt',queryParams);
+			$("#btn_new").on("click", function(event) {
+				openNewParam();
+			});
+			
+			$('#dt_param').on('init.dt', queryParams);
 
 			$('#dt_param').dataTable({
 				dom : 'tr<"dt-panelfooter clearfix"lip>',
@@ -155,12 +242,28 @@
 
 			function queryParams() {
 				var ajax = {
-						url : "list",
-						type : "POST",
-						data: My.params('#fo_query')
+					url : "list",
+					type : "POST",
+					data : My.params('#fo_query')
 				}
 				$('#dt_param').DataTable().settings()[0].ajax = ajax;
 				$('#dt_param').DataTable().ajax.reload();
+			}
+			
+			function openNewParam(){
+                $.magnificPopup.open({
+                    removalDelay: 500, //delay removal by X to allow out-animation,
+                    items: {
+                        src: '#w-add-param'
+                    },
+                    // overflowY: 'hidden', // 
+                    callbacks: {
+                        beforeOpen: function(e) {
+                            alert(1);
+                        }
+                    },
+                    midClick: true // allow opening popup on middle mouse click. Always set it to true if you don't provide alternative source.
+                });
 			}
 
 		});
