no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/header-banner.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/header-banner.html
@@ -46,7 +46,7 @@
 				</li>
 				<li class="media">
 					<a class="media-left" href="#">
-						<img src="/theme/assets/img/avatars/5.jpg" class="mw40" alt="用户头像" />
+						<img src="/theme/assets/img/avatars/2.jpg" class="mw40" />
 					</a>
 					<div class="media-body">
 						<h5 class="media-heading">
