--- a/myclouds-admin-web/src/main/resources/templates/modules/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/param.html
@@ -162,6 +162,7 @@
 			Core.init();
 			$(".basic-single").select2({
 				placeholder : "请选择...",
+				width:'100%',
 				allowClear : true
 			});
 			$("#btn_query").on("click", function(e) {
