no commit message

--- a/myclouds-admin-web/src/main/resources/templates/modules/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/param.html
@@ -47,7 +47,7 @@
 								<div class="col-md-2">
 									<select name="sys_key" class="basic-single form-control">
 										<option></option>
-										<option value="0">平台全局</option>
+										<option value="0">缺省全局</option>
 									</select>
 								</div>
 							</div>
@@ -106,15 +106,14 @@
 								<div class="form-group ">
 									<label class="col-md-3 control-label">* 参数名称：</label>
 									<div class="col-md-9">
-										<input type="text" class="form-control" />
+										<input  type="text" name="name" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="col-md-3 control-label">所属系统：</label>
 									<div class="col-md-9">
 										<select name="sys_key" class="basic-single form-control" style="width: 250px">
-											<option></option>
-											<option value="0">平台全局</option>
+											<option value="0">缺省全局</option>
 										</select>
 									</div>
 								</div>
