no commit message

--- a/myclouds-admin-web/src/main/resources/templates/fragments/head.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/head.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/magnific/magnific-popup.css" />
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/datatables/media/css/dataTables.bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="/theme/vendor/plugins/select2/css/core.css" />
+<link rel="stylesheet" type="text/css" href="/css/myclouds.css" />
 <link rel="shortcut icon" href="/theme/assets/img/favicon.ico" />
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
