--- a/myclouds-admin-web/src/main/resources/templates/modules/param.html
+++ b/myclouds-admin-web/src/main/resources/templates/modules/param.html
@@ -104,21 +104,21 @@
 						<div class="panel-body">
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
-									<label class="col-md-3 control-label">* 所属系统：</label>
+									<label class="col-md-3 control-label required">所属系统：</label>
 									<div class="col-md-9">
 										<select name="sys_key" class="basic-single form-control" style="width: 250px">
 											<option value="0">缺省全局</option>
 										</select>
 									</div>
 								</div>
-								<div class="form-group ">
-									<label class="col-md-3 control-label">* 参数名称：</label>
+								<div class="form-group">
+									<label class="col-md-3 control-label required">参数名称：</label>
 									<div class="col-md-9">
 										<input type="text" name="name" class="form-control" />
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-md-3 control-label">* 参数键：</label>
+									<label class="col-md-3 control-label required">参数键：</label>
 									<div class="col-md-9">
 										<input class="form-control" type="text" name="param_key" />
 									</div>
